@@ -1,10 +1,30 @@
+buildscript {
+    repositories {
+        maven("https://gitee.com/Karlatemp/Karlatemp-repo/raw/master/")
+    }
+    dependencies.classpath("io.github.karlatemp:Java8Converter:1.0.2")
+}
+
+io.github.karlatemp.java8converter.Java8Converter().apply(project)
+
+tasks.named("java8converter", io.github.karlatemp.java8converter.ConverterTask::class.java).configure {
+    dependsOn("shadowJar")
+    setup {
+        filter {
+            name.startsWith("io/github/karlatemp/klib/")
+        }
+    }
+}
+
 plugins {
     kotlin("jvm") version "1.3.72"
     id("com.github.johnrengelman.shadow") version "5.2.0"
+//     id("io.github.karlatemp.Java8Converter") version "1.0.0-Alpha"
 }
 
+
 group = "io.github.karlatemp"
-version = "1.0-SNAPSHOT"
+version = "1.1-Alpha"
 
 repositories {
     mavenLocal()
@@ -15,6 +35,7 @@ repositories {
 }
 
 tasks.withType(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar::class.java) {
+    this.archiveClassifier.convention("").set("")
     dependencies {
         exclude {
             when ("${it.moduleGroup}:${it.moduleName}") {
@@ -34,10 +55,14 @@ tasks.withType(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar::class
     }
 }
 
+tasks.named("jar").get().enabled = false
+
 inline fun kotlinx(module: String, version: String? = null): Any =
     "org.jetbrains.kotlinx:kotlinx-$module${version?.let { ":$version" } ?: ""}"
 
 dependencies {
+    implementation("org.ow2.asm:asm-commons:8.0.1")
+    implementation("org.ow2.asm:asm-tree:8.0.1")
     implementation("org.jetbrains:annotations:19.0.0")
     implementation(kotlin("stdlib-jdk8", "1.3.72"))
     implementation(kotlinx("coroutines-core", "1.3.4"))
@@ -54,7 +79,18 @@ dependencies {
 //        }
 //    }
 //}
+
+configure<JavaPluginConvention> {
+    sourceCompatibility = JavaVersion.VERSION_13
+}
+
 tasks {
+    compileJava {
+        with(options) {
+            this.compilerArgs.addAll(listOf("--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED"))
+            this.compilerArgs.addAll(listOf("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"))
+        }
+    }
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
         kotlinOptions.freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
